--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "SentryFlickering",
-  "displayName": "SentryFlickering"
+  "name": "GestureHandlerIssues",
+  "displayName": "GestureHandlerIssues"
 }
