--- a/ios/GestureHandlerIssues.xcodeproj/xcshareddata/xcschemes/GestureHandlerIssues.xcscheme
+++ b/ios/GestureHandlerIssues.xcodeproj/xcshareddata/xcschemes/GestureHandlerIssues.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "SentryFlickering.app"
-               BlueprintName = "SentryFlickering"
-               ReferencedContainer = "container:SentryFlickering.xcodeproj">
+               BuildableName = "GestureHandlerIssues.app"
+               BlueprintName = "GestureHandlerIssues"
+               ReferencedContainer = "container:GestureHandlerIssues.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "SentryFlickeringTests.xctest"
-               BlueprintName = "SentryFlickeringTests"
-               ReferencedContainer = "container:SentryFlickering.xcodeproj">
+               BuildableName = "GestureHandlerIssuesTests.xctest"
+               BlueprintName = "GestureHandlerIssuesTests"
+               ReferencedContainer = "container:GestureHandlerIssues.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "SentryFlickering.app"
-            BlueprintName = "SentryFlickering"
-            ReferencedContainer = "container:SentryFlickering.xcodeproj">
+            BuildableName = "GestureHandlerIssues.app"
+            BlueprintName = "GestureHandlerIssues"
+            ReferencedContainer = "container:GestureHandlerIssues.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "SentryFlickering.app"
-            BlueprintName = "SentryFlickering"
-            ReferencedContainer = "container:SentryFlickering.xcodeproj">
+            BuildableName = "GestureHandlerIssues.app"
+            BlueprintName = "GestureHandlerIssues"
+            ReferencedContainer = "container:GestureHandlerIssues.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
