--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,7 +14,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'SentryFlickering' do
+target 'GestureHandlerIssues' do
   config = use_native_modules!
 
   use_react_native!(
@@ -23,7 +23,7 @@ target 'SentryFlickering' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'SentryFlickeringTests' do
+  target 'GestureHandlerIssuesTests' do
     inherit! :complete
     # Pods for testing
   end
