--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SentryFlickering",
+  "name": "GestureHandlerIssues",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "^2.18.1",
+    "react-native-reanimated": "^3.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
